--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,11 @@
 version: '2.1'
 orbs:
   aws-cli: circleci/aws-cli@3.1
+
 jobs:
   aws-cli-example:
+    environment:
+      AWS_REGION: ap-southeast-1
     executor: aws-cli/default
     steps:
       - checkout
@@ -10,11 +13,11 @@ jobs:
           profile-name: "WEB-IDENTITY-PROFILE"
           role-arn: "arn:aws:iam::100682289518:role/circleci-role2"
           role-session-name: example-session
-          aws-region: ap-southeast-1
+          aws-region: AWS_REGION
       - run:
           name: List-ECR-Repositories
           command: |
-            aws ecr describe-repositories
+             aws ecr get-login-password --profile "OIDC-PROFILE"
 workflows:
   aws-cli:
     jobs:
